// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`People should pass snapshot when passed a single card 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <People
    addToFav={undefined}
    cards={
        Array [
            Object {
              "Homeword": "Tatooine",
              "Population": "200000",
              "Species": "Human",
              "cardType": "people",
              "name": "Beru Whitesun lars",
            },
          ]
    }
    fetchData={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          addToFav={undefined}
          card={
                    Object {
                              "Homeword": "Tatooine",
                              "Population": "200000",
                              "Species": "Human",
                              "cardType": "people",
                              "name": "Beru Whitesun lars",
                            }
          }
/>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Beru Whitesun lars",
        "nodeType": "function",
        "props": Object {
          "addToFav": undefined,
          "card": Object {
            "Homeword": "Tatooine",
            "Population": "200000",
            "Species": "Human",
            "cardType": "people",
            "name": "Beru Whitesun lars",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            addToFav={undefined}
            card={
                        Object {
                                    "Homeword": "Tatooine",
                                    "Population": "200000",
                                    "Species": "Human",
                                    "cardType": "people",
                                    "name": "Beru Whitesun lars",
                                  }
            }
/>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Beru Whitesun lars",
          "nodeType": "function",
          "props": Object {
            "addToFav": undefined,
            "card": Object {
              "Homeword": "Tatooine",
              "Population": "200000",
              "Species": "Human",
              "cardType": "people",
              "name": "Beru Whitesun lars",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`People should pass snapshot when passed cards 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <People
    addToFav={undefined}
    cards={
        Array [
            Object {
              "Homeword": "Tatooine",
              "Population": "200000",
              "Species": "Droid",
              "cardType": "people",
              "name": "R5-D4",
            },
            Object {
              "Homeword": "Tatooine",
              "Population": "200000",
              "Species": "Human",
              "cardType": "people",
              "name": "Beru Whitesun lars",
            },
          ]
    }
    fetchData={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          addToFav={undefined}
          card={
                    Object {
                              "Homeword": "Tatooine",
                              "Population": "200000",
                              "Species": "Droid",
                              "cardType": "people",
                              "name": "R5-D4",
                            }
          }
/>,
        <Card
          addToFav={undefined}
          card={
                    Object {
                              "Homeword": "Tatooine",
                              "Population": "200000",
                              "Species": "Human",
                              "cardType": "people",
                              "name": "Beru Whitesun lars",
                            }
          }
/>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "R5-D4",
        "nodeType": "function",
        "props": Object {
          "addToFav": undefined,
          "card": Object {
            "Homeword": "Tatooine",
            "Population": "200000",
            "Species": "Droid",
            "cardType": "people",
            "name": "R5-D4",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Beru Whitesun lars",
        "nodeType": "function",
        "props": Object {
          "addToFav": undefined,
          "card": Object {
            "Homeword": "Tatooine",
            "Population": "200000",
            "Species": "Human",
            "cardType": "people",
            "name": "Beru Whitesun lars",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            addToFav={undefined}
            card={
                        Object {
                                    "Homeword": "Tatooine",
                                    "Population": "200000",
                                    "Species": "Droid",
                                    "cardType": "people",
                                    "name": "R5-D4",
                                  }
            }
/>,
          <Card
            addToFav={undefined}
            card={
                        Object {
                                    "Homeword": "Tatooine",
                                    "Population": "200000",
                                    "Species": "Human",
                                    "cardType": "people",
                                    "name": "Beru Whitesun lars",
                                  }
            }
/>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "R5-D4",
          "nodeType": "function",
          "props": Object {
            "addToFav": undefined,
            "card": Object {
              "Homeword": "Tatooine",
              "Population": "200000",
              "Species": "Droid",
              "cardType": "people",
              "name": "R5-D4",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Beru Whitesun lars",
          "nodeType": "function",
          "props": Object {
            "addToFav": undefined,
            "card": Object {
              "Homeword": "Tatooine",
              "Population": "200000",
              "Species": "Human",
              "cardType": "people",
              "name": "Beru Whitesun lars",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
